Fix: Remove body margin to stretch contents  all the way

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     min-height: 100vh;
     justify-content: space-between;
     font-family:Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 /* HEADER AND HERO SECTION CONTAINER */
